# cclint

./: .cclint.example.yaml  .cclint.lua-example.yaml  .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  Makefile  PR14_FIX.patch  PR14_FIX_INSTRUCTIONS.md  PR14_FIX_SUMMARY.md  PROGRESS_SUMMARY.md  README.md  README_PR14_FIX.md  SECURITY_SUMMARY.md  WORK_SUMMARY.md  WORK_SUMMARY_2024-01-24.md  build.sh
.github/workflows/: auto-tag.yml  ci.yml  release.yml
_codeql_build_dir/: Makefile
_codeql_build_dir/src/: Makefile  cclint-lsp
cmake/: FindLuaJIT.cmake  SafeFindClang.cmake
crates/cclint-ast/: Cargo.toml
crates/cclint-cli/: Cargo.toml
crates/cclint-cli/src/: main.rs  suppress.rs
crates/cclint-config/: Cargo.toml
crates/cclint-diagnostic/: Cargo.toml
crates/cclint-script/: Cargo.toml
docs/: FAQ.md  LUA_API_VISION.md  LUA_MIGRATION_STATUS.md  MIGRATION_IMPACT.md  PARSER_IMPLEMENTATION_PLAN.md  PARSER_STATUS.md  PREPROCESSOR_USAGE.md  TODO.md  TODO_LUA_MIGRATION.md  WORK_SESSION_2026-01-24.md  api.md  build.md  ci_integration.md  design.md  detailed_design.md  ide_integration.md  lua_api.md  milestones.md  output_formats.md  plugin_development.md  requirements.md  rules.md  troubleshooting.md  usage.md  windows_build.md  要望
docs/new_plans/: 00_README.md  04_IMPLEMENTATION_GUIDE.md  05_API_SPECIFICATION.md  06_CODE_EXAMPLES.md  07_CURRENT_STATUS.md
examples/ci/: Jenkinsfile  gitlab-ci.yml
examples/config/: cclint.yaml
examples/configs/: README.md  lua_naming_rules.yaml  minimal.yaml  modern-cpp.yaml  performance.yaml  security.yaml  strict.yaml
examples/plugins/: CMakeLists.txt  example_plugin.cpp
examples/rules/: README.md  call_only_from_main.lua  class_pascal_case.lua  example_rule.lua  explicit_single_arg_ctor.lua  forbid_global_new.lua  forbid_plain_enum.lua  function_snake_case.lua  header_pragma_once.lua  include_restriction.lua  lifo_new_delete.lua  max_function_params.lua  no_c_style_cast.lua  no_external_internal_ref.lua  no_global_variable.lua  no_typedef.lua  no_using_namespace_in_header.lua  private_prefix.lua  require_braces.lua  virtual_destructor.lua
examples/sample_project/: .cclint.yaml  Makefile  README.md  sample
rules/en/: bool_variable_prefix.lua  call_restriction.lua  complexity.lua  destructor_virtual.lua  friend_detection.lua  max_consecutive_empty_lines.lua  namespace_lowercase.lua  no_c_style_cast.lua  no_cout_in_class.lua  no_global_using_namespace.lua  no_magic_numbers.lua  no_new_in_class.lua  no_throw_in_destructor.lua  one_class_per_file.lua  (+7 more)
samples/: .cclint.yaml  class_no_inline.cpp  class_spaced.cpp  main  main.cpp  simple_class.cpp  test_all_rules.yaml  test_api.yaml  test_ast_dump.yaml  test_config.yaml  test_debug.yaml  test_file_context.yaml  test_header.h  test_header_guard.yaml  test_line_length.yaml  test_naming.yaml  test_new_apis.cpp  test_new_rules.cpp  test_single_rule.yaml  test_template_config.yaml  test_template_simple.cpp  test_up_to_template.cpp
scripts/: README.md  dist.sh  install.sh  install_dependencies.sh
src/: CMakeLists.txt  main.cpp
src/cache/: file_cache.cpp  file_cache.hpp
src/cli/: argument_parser.cpp  argument_parser.hpp  help_formatter.cpp  help_formatter.hpp  option_parser.cpp  option_parser.hpp
src/compiler/: detector.cpp  detector.hpp  wrapper.cpp  wrapper.hpp
src/config/: config_loader.cpp  config_loader.hpp  config_types.hpp  yaml_config.cpp  yaml_config.hpp
src/diagnostic/: diagnostic.cpp  diagnostic.hpp  fixer.cpp  fixer.hpp
src/engine/: analysis_engine.cpp  analysis_engine.hpp  dataflow_analyzer.cpp  dataflow_analyzer.hpp  dependency_tracker.cpp  dependency_tracker.hpp  incremental.cpp  incremental.hpp
src/lsp/: lsp_server.cpp  lsp_server.hpp  main_lsp.cpp
src/lua/: lua_bridge.cpp  lua_bridge.hpp  lua_engine.cpp  lua_engine.hpp  lua_rule.cpp  lua_rule.hpp
src/output/: formatter.cpp  formatter.hpp  formatter_factory.cpp  formatter_factory.hpp  json_formatter.cpp  json_formatter.hpp  text_formatter.cpp  text_formatter.hpp  xml_formatter.cpp  xml_formatter.hpp
src/parallel/: thread_pool.cpp  thread_pool.hpp
src/parser/: ast.cpp  ast.hpp  builtin_parser.cpp  builtin_parser.hpp  enhanced_lexer.cpp  enhanced_lexer.hpp  error_recovery.cpp  error_recovery.hpp  lexer.cpp  lexer.hpp  macro_expander.cpp  macro_expander.hpp  parser_performance.cpp  parser_performance.hpp  preprocessor.cpp  preprocessor.hpp  simple_parser.cpp  simple_parser.hpp  token_types_enhanced.cpp  token_types_enhanced.hpp
src/rules/: plugin_loader.cpp  plugin_loader.hpp  rule_base.cpp  rule_base.hpp  rule_executor.cpp  rule_executor.hpp  rule_registry.cpp  rule_registry.hpp
src/rules/builtin/: function_complexity.cpp  function_complexity.hpp  header_guard.cpp  header_guard.hpp  max_line_length.cpp  max_line_length.hpp  naming_convention.cpp  naming_convention.hpp
src/semantic/: constexpr_evaluator.cpp  constexpr_evaluator.hpp  name_lookup.cpp  name_lookup.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp  symbol_table.cpp  symbol_table.hpp  type_system.cpp  type_system.hpp
src/utils/: file_utils.cpp  file_utils.hpp  logger.cpp  logger.hpp  string_utils.cpp  string_utils.hpp
tests/: CMakeLists.txt  README.md  test_enhanced_lexer.cpp  test_preprocessor.cpp
tests/cpp_fixtures/: .cclint.toml  .last_run.json  expected.txt
tests/cpp_fixtures/src/: cross_tu_a.cpp  cross_tu_b.cpp  foo.h  main.cpp  violations.cpp  violations.h  widget.cpp  widget_internal.h
tests/cpp_fixtures_clean/: .cclint.toml
tests/cpp_fixtures_clean/src/: clean.cpp  clean.h  widget_internal.cpp  widget_internal.h
tests/integration/: CMakeLists.txt
tests/parser/: test_expression_parser.cpp  test_statement_parser.cpp
tests/samples/: naming_test.cpp
tests/samples/invalid/: syntax_errors.cpp
tests/samples/performance_issues/: inefficient_code.cpp
tests/samples/security_issues/: unsafe_functions.cpp
tests/samples/style_issues/: naming_issues.cpp
tests/samples/valid/: calculator.cpp
tests/unit/: CMakeLists.txt
(+214 files in other folders)
