[workspace]
resolver = "2"
members = [
    "crates/cclint-cli",
    "crates/cclint-ast",
    "crates/cclint-script",
    "crates/cclint-diagnostic",
    "crates/cclint-config",
]

[workspace.package]
version = "0.2.15"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
repository = "https://github.com/KikuchiTomo/cclint"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
clang = { version = "2", features = ["clang_9_0", "runtime"] }
codespan-reporting = "0.11"
walkdir = "2"
glob = "0.3"
unicode-width = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
rayon = "1"

cclint-ast = { path = "crates/cclint-ast" }
cclint-script = { path = "crates/cclint-script" }
cclint-diagnostic = { path = "crates/cclint-diagnostic" }
cclint-config = { path = "crates/cclint-config" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
