[package]
name = "cclint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cclint"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
cclint-config.workspace = true
cclint-ast.workspace = true
cclint-script.workspace = true
cclint-diagnostic.workspace = true
