# Integration tests for cclint

# Placeholder for integration test sources
# set(INTEGRATION_TEST_SOURCES
#     test_basic_execution.cpp
#     test_config_integration.cpp
#     test_compiler_integration.cpp
#     test_output_formats.cpp
#     test_error_handling.cpp
# )

# Individual test executables (when implemented)
# add_executable(test_basic_execution test_basic_execution.cpp)
# target_link_libraries(test_basic_execution ${GTEST_LIBRARIES} pthread)
# add_test(NAME BasicExecutionTest COMMAND test_basic_execution)

message(STATUS "Integration tests will be added here when Google Test is integrated")
