# Unit tests for cclint

# Placeholder for unit test sources
# set(UNIT_TEST_SOURCES
#     test_argument_parser.cpp
#     test_config_loader.cpp
#     test_compiler_wrapper.cpp
#     test_compiler_detector.cpp
#     test_diagnostic.cpp
#     test_formatter.cpp
#     test_file_utils.cpp
#     test_string_utils.cpp
#     test_logger.cpp
# )

# Individual test executables (when implemented)
# add_executable(test_argument_parser test_argument_parser.cpp)
# target_link_libraries(test_argument_parser ${GTEST_LIBRARIES} pthread)
# add_test(NAME ArgumentParserTest COMMAND test_argument_parser)

message(STATUS "Unit tests will be added here when Google Test is integrated")
